manifests/magento.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magento
  namespace: magento
spec:
  replicas: 2
  strategy:
    # type: Recreate
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: magento

  template:
    metadata:
      labels:
        app: magento
    spec:
      securityContext:
        fsGroup: 33

      containers:
      - name: magento
        image: alexcheng/magento2:2.1
        imagePullPolicy: Always

        ports:
        - containerPort: 80

        # POUR HPA
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

        volumeMounts:
        - name: magento-app-etc
          mountPath: /var/www/html/app/etc
        - name: magento-var
          mountPath: /var/www/html/var
        - name: magento-generated
          mountPath: /var/www/html/generated

      volumes:
      - name: magento-app-etc
        persistentVolumeClaim:
          claimName: magento-app-etc-pvc
      - name: magento-var
        persistentVolumeClaim:
          claimName: magento-var-pvc
      - name: magento-generated
        persistentVolumeClaim:
          claimName: magento-generated-pvc
