manifests/magento-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: magento
  namespace: magento
spec:
  selector:
    app: magento
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
