manifests/magento-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magento-ingress
  namespace: magento
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: magento.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: magento
            port:
              number: 80
